Progression, tout un peu à la fois

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     <div id="answerLieContainer"></div>
 </div>
 
+<div id="codePanel" style="display:none">
+    Code: <h1 id="codeText"></h1>
+    <div id="playersContainer"></div>
+    <button onclick="start()">Commencer !</button>
+</div>
+
 <div id="waitPanel" style="display:none">
     <h1>Regardez la présentation</h1>
 </div>
