Progression, tout un peu à la fois

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     <button onclick="start()">Commencer !</button>
 </div>
 
+<div id="resultPanel" style="display:none">
+    <h1 id="codeResultText"></h1>
+    <div id="messageContainer"></div>
+</div>
+
 <div id="waitPanel" style="display:none">
     <h1>Regardez la présentation</h1>
 </div>
