Progression, tout un peu à la fois

--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,9 @@
     <title>Liars !</title>
 
     <script src="http://localhost:8000/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="./client/player.js"></script>
-    <script type="text/javascript" src="./client/presenter.js"></script>
-    <script type="text/javascript" src="./client/client.js"></script>
+    <script type="text/javascript" src="./js/player.js"></script>
+    <script type="text/javascript" src="./js/presenter.js"></script>
+    <script type="text/javascript" src="./js/client.js"></script>
 
     <style type="text/css">
 
