--- a/client/index.html
+++ b/client/index.html
@@ -3,45 +3,45 @@
 <head>
     <meta charset='utf-8'>
     <title>Liars !</title>
-
-    <script src="http://localhost:8001/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="./js/player.js"></script>
-    <script type="text/javascript" src="./js/presenter.js"></script>
-    <script type="text/javascript" src="./js/client.js"></script>
-
     <style type="text/css">
 
     </style>
 </head>
 
-<body>
+<body onload="load()">
 
 <div id="startPanel">
-    <label for="name">Nom:</label><input id="name" value="" >
-    <label for="code">Code d'accès:</label><input id="code" value="" >
+    <label for="name">Nom:</label><input id="name" value="">
+    <label for="code">Code d'accès:</label><input id="code" value="">
     <button onclick="iAm('player')">Jouer !</button>
     <button onclick="iAm('presenter')">Device de présentation</button>
 </div>
 
 <div id="liePanel" style="display:none">
     <h1 id="questionText"></h1>
-    <label for="lie">Entrez votre mensonge:</label><input id="lie" value="">
-    <button onclick="lie()">Jouer !</button>
+
+    <div id="lieResponse">
+        <label for="lie">Entrez votre mensonge:</label><input id="lie" value="">
+        <button onclick="lie()">Jouer !</button>
+    </div>
 </div>
 
 <div id="answerPanel" style="display:none">
     <h1 id="answerQuestionText"></h1>
+
     <div id="answerLieContainer"></div>
 </div>
 
 <div id="codePanel" style="display:none">
     Code: <h1 id="codeText"></h1>
+
     <div id="playersContainer"></div>
     <button onclick="start()">Commencer !</button>
 </div>
 
 <div id="resultPanel" style="display:none">
     <h1 id="codeResultText"></h1>
+
     <div id="messageContainer"></div>
 </div>
 
@@ -49,6 +49,10 @@
     <h1>Regardez la présentation</h1>
 </div>
 
+<script src="http://localhost:8001/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="./js/player.js"></script>
+<script type="text/javascript" src="./js/presenter.js"></script>
+<script type="text/javascript" src="./js/client.js"></script>
 </body>
 
 </html>
