Mieux gérer quand ils trouvent la vérité

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,8 @@
 <div id="liePanel" style="display:none">
     <h1 id="questionText"></h1>
 
+    <h3 id="warningTruth" style="display: none">Vous avez trouvé la vérité. Merci de choisir un mensonge.</h3>
+
     <div id="lieResponse">
         <label for="lie">Entrez votre mensonge:</label><input id="lie" value="">
         <button onclick="lie()">Jouer !</button>
