--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,21 @@
     <h1>Regardez la présentation</h1>
 </div>
 
+<div id="sounds" style="display:none">
+    <audio id="endgame" src="sounds/endgame.mp3"></audio>
+    <audio id="player1" src="sounds/player1.mp3"></audio>
+    <audio id="player2" src="sounds/player2.mp3"></audio>
+    <audio id="player3" src="sounds/player3.mp3"></audio>
+    <audio id="player4" src="sounds/player4.mp3"></audio>
+    <audio id="player5" src="sounds/player5.mp3"></audio>
+    <audio id="player6" src="sounds/player6.mp3"></audio>
+    <audio id="player7" src="sounds/player7.mp3"></audio>
+    <audio id="player8" src="sounds/player8.mp3"></audio>
+    <audio id="player9" src="sounds/player9.mp3"></audio>
+    <audio id="result" src="sounds/result.mp3"></audio>
+    <audio id="song" src="sounds/song.mp3"></audio>
+</div>
+
 <script src="http://localhost:8001/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="./js/player.js"></script>
 <script type="text/javascript" src="./js/presenter.js"></script>
