--- a/client/index.html
+++ b/client/index.html
@@ -62,6 +62,7 @@
     <audio id="player7" src="sounds/player7.mp3"></audio>
     <audio id="player8" src="sounds/player8.mp3"></audio>
     <audio id="player9" src="sounds/player9.mp3"></audio>
+    <audio id="player10" src="sounds/player10.mp3"></audio>
     <audio id="result" src="sounds/result.mp3"></audio>
     <audio id="song" src="sounds/song.mp3"></audio>
 </div>
