--- a/client/index.html
+++ b/client/index.html
@@ -67,7 +67,7 @@
     <audio id="song" src="sounds/song.mp3"></audio>
 </div>
 
-<script src="http://localhost:8001/socket.io/socket.io.js"></script>
+<script src="http://192.168.1.16:8001/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="./js/player.js"></script>
 <script type="text/javascript" src="./js/presenter.js"></script>
 <script type="text/javascript" src="./js/client.js"></script>
